--- a/src/main/resources/templates/reporting/reporting_result_user_summary.vm
+++ b/src/main/resources/templates/reporting/reporting_result_user_summary.vm
@@ -17,7 +17,7 @@
                                 <table class="aui reporting-table">
                                     <thead>
                                         <tr>
-                                            <th>$i18n.getText("jtrp.report.us.col.jtrp_col_user")</th>
+                                            <th class="user-tooltip" title="$i18n.getText('jtrp.report.wd.col.jtrp_col_user.help')">$i18n.getText("jtrp.report.us.col.jtrp_col_user")</th>
                                             <th>$i18n.getText("jtrp.report.us.col.jtrp_col_totalLogged")</th>
                                         </tr>
                                     </thead>
