--- a/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
+++ b/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
@@ -129,7 +129,7 @@
                                         <th class="jtrp_col_fixVersions" style="#if( $isNotShowFixVersions )display:none;#end">$i18n.getText("jtrp.report.wd.col.jtrp_col_fixVersions")</th>
                                         <th class="jtrp_col_resolution" style="#if( $isNotShowResolution )display:none;#end">$i18n.getText("jtrp.report.wd.col.jtrp_col_resolution")</th>
                                         <th class="jtrp_col_worklogDescription" style="#if( $isNotShowWorklogDescription )display:none;#end">$i18n.getText("jtrp.report.wd.col.jtrp_col_worklogDescription")</th>
-                                        <th class="jtrp_col_user" style="#if( $isNotShowUser )display:none;#end">$i18n.getText("jtrp.report.wd.col.jtrp_col_user")</th>
+                                        <th class="jtrp_col_user user-tooltip" title="$i18n.getText('jtrp.report.wd.col.jtrp_col_user.help')" style="#if( $isNotShowUser )display:none;#end">$i18n.getText("jtrp.report.wd.col.jtrp_col_user")</th>
                                         <th class="jtrp_col_startTime" style="#if( $isNotShowStartTime )display:none;#end">$i18n.getText("jtrp.report.wd.col.jtrp_col_startTime")</th>
                                         <th class="jtrp_col_timeSpent" style="#if( $isNotShowTimeSpent )display:none;#end">$i18n.getText("jtrp.report.wd.col.jtrp_col_timeSpent")</th>
                                         <th class="jtrp_col_worklogCreated" style="#if( $isNotShowWorklogCreated )display:none;#end">$i18n.getText("jtrp.report.wd.col.jtrp_col_worklogCreated")</th>
@@ -141,16 +141,20 @@
                                     <tr>
                                         <td class="jtrp_col_project" style="#if( $isNotShowProject )display:none;#end">$wd.projectName</td>
                                         <td class="jtrp_col_projectDescription" style="#if( $isNotShowProjectDescription )display:none;#end">#if ( $wd.projectDescription ) $wd.projectDescription #end</td>
-                                        <td class="jtrp_col_issueKey" style="#if( $isNotShowIssueKey )display:none;#end">$wd.issueKey</td>
+                                        <td class="jtrp_col_issueKey" style="#if( $isNotShowIssueKey )display:none;#end">
+                                          <a href="$contextPath/browse/$wd.issueKey" class="issue-link">$wd.issueKey</a>
+                                        </td>
                                         <td class="jtrp_col_issueSummary" style="#if( $isNotShowIssueSummary )display:none;#end">$wd.issueSummary</td>
-                                        <td class="jtrp_col_type" style="#if( $isNotShowType )display:none;#end">$wd.issueTypeName</td>
+                                        <td class="jtrp_col_type" style="#if( $isNotShowType )display:none;#end">
+                                          <img class="img-tooltip" src="#if( $wd.issueTypeIconUrl.startsWith("http") )$wd.issueTypeIconUrl#else$contextPath$wd.issueTypeIconUrl#end" alt="$wd.issueTypeName" title="$wd.issueTypeName"></img>
+                                        </td>
                                         <td class="jtrp_col_status" style="#if( $isNotShowStatus )display:none;#end">
                                           #set($issueStatus = $constantsManager.getStatusByTranslatedName($wd.issueStatusName))
                                           #set($statusCategory = $issueStatus.getStatusCategory())
                                           <span original-title="" class=" jira-issue-status-lozenge aui-lozenge jira-issue-status-lozenge-$statusCategory.colorName jira-issue-status-lozenge-$statusCategory.key aui-lozenge-subtle jira-issue-status-lozenge-max-width-medium" data-tooltip="<span class=&quot;jira-issue-status-tooltip-title&quot;>$wd.issueStatusName</span>">$wd.issueStatusName</span>
                                         </td>
                                         <td class="jtrp_col_priority" style="#if( $isNotShowPriority )display:none;#end">
-                                          <img src="#if( $wd.priorityIconUrl.startsWith("http") )$wd.priorityIconUrl#else$contextPath$wd.priorityIconUrl#end" alt="$wd.priorityName"></img>
+                                          <img class="img-tooltip" src="#if( $wd.priorityIconUrl.startsWith("http") )$wd.priorityIconUrl#else$contextPath$wd.priorityIconUrl#end" alt="$wd.priorityName" title="$wd.priorityName"></img>
                                         </td>
                                         <td class="jtrp_col_assignee" style="#if( $isNotShowAssignee )display:none;#end">#if ( !$wd.issueAssignee ) $i18n.getText("jtrp.picker.unassigned.value") #else $wd.issueAssignee #end</td>
                                         <td class="jtrp_col_reporter" style="#if( $isNotShowReporter )display:none;#end">$wd.issueReporter</td>
